--- a/main/autocode/build.gradle
+++ b/main/autocode/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-	implementation group: 'com.peterabeles', name: 'auto64fto32f', version: '2.1'
+	implementation group: 'com.peterabeles', name: 'auto64fto32f', version: '2.2-SNAPSHOT'
 	api group: 'commons-io', name: 'commons-io', version: COMMONS_IO_VERSION
 }
 
