- Configuration   * setTo() function is semi-required now   * Created standard unit test to enforce setTo() - Fixed GUI issues

--- a/main/boofcv-feature/build.gradle
+++ b/main/boofcv-feature/build.gradle
@@ -6,6 +6,7 @@ dependencies {
     benchmarkImplementation project(':main:boofcv-ip')
     benchmarkImplementation project(':integration:boofcv-ffmpeg')
 
+    testImplementation project(':main:boofcv-types').sourceSets.test.output
     testImplementation project(':main:boofcv-io')
     testImplementation project(':integration:boofcv-swing')
 }
