--- a/main/boofcv-ip/build.gradle
+++ b/main/boofcv-ip/build.gradle
@@ -1,3 +1,4 @@
 dependencies {
     api project(':main:boofcv-types')
+    testImplementation project(':main:boofcv-types').sourceSets.test.output
 }
