--- a/main/boofcv-recognition/build.gradle
+++ b/main/boofcv-recognition/build.gradle
@@ -19,4 +19,5 @@ dependencies {
     testImplementation project(':main:boofcv-io')
     testImplementation project(':main:boofcv-simulation')
     testImplementation project(':integration:boofcv-swing')
+    testImplementation project(':main:boofcv-types').sourceSets.test.output
 }
