--- a/main/boofcv-learning/build.gradle
+++ b/main/boofcv-learning/build.gradle
@@ -7,6 +7,7 @@ dependencies {
 
     testImplementation project(':main:boofcv-io')
     testImplementation project(':integration:boofcv-swing')
+    testImplementation project(':main:boofcv-types').sourceSets.test.output
 }
 
 
