- JCodec works and is now fully integrated - Fixed performance regression in KLT dense optical flow

--- a/demonstrations/build.gradle
+++ b/demonstrations/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     api project(':integration:boofcv-swing')
 
     implementation project(':integration:boofcv-ffmpeg')
+    implementation project(':integration:boofcv-jcodec')
     implementation project(':integration:boofcv-WebcamCapture')
 }
 
