--- a/integration/boofcv-jcodec/build.gradle
+++ b/integration/boofcv-jcodec/build.gradle
@@ -4,7 +4,8 @@ dependencies {
     api project(':main:boofcv-io')
     api project(':integration:boofcv-swing')
 
-    compile group: 'org.jcodec', name: 'jcodec', version: '0.1.9'
+    compile 'org.jcodec:jcodec:0.2.3'
+    compile 'org.jcodec:jcodec-javase:0.2.3'
 }
 
 sourceSets {
