--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ project.ext.set("deepboof_version", '0.4')
 if( project.hasProperty("native_arch")) {
     project.ext.native_arch = [project.native_arch]
 } else {
-    project.ext.native_arch = [ "linux-armhf","linux-x86_64", "macosx-x86_64", "windows-x86_64"]
+    project.ext.native_arch = ["linux-x86_64", "macosx-x86_64", "windows-x86_64"]
 }
 
 subprojects {
