--- a/integration/boofcv-android/examples/video/app/src/main/AndroidManifest.xml
+++ b/integration/boofcv-android/examples/video/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".GradientActivity"/>
         <activity android:name=".ExposureActivity"/>
         <activity android:name=".QrCodeActivity"/>
+        <activity android:name=".BitmapActivity"/>
 
     </application>
 
