feature/fast - Added a feature selector for when there's no intensity image  - GeneralFeatureDetector    * correctly handles min/max excluding and feature limiting    * Has a single exclude list    * Requires two extracts now and has a single feature limit for min/max  - PointTrackerKltPyramid    * Now enforces max track limit and overrides default value in GeneralFeatureDetector  - Config    * Renamed featureLimitPerSet to featureLimit
feature/gui
 - Added control panel for Fast Corner
 - VisOdomMonoDepthPnP
  * Fixed issue where trackers were not being drawn on frame 1

feature/misc
- Fixed GUI bugs
  * Update isn't active from the start any more
  * Scroll bar appears if there isn't enough vertical space

--- a/build.gradle
+++ b/build.gradle
@@ -89,7 +89,7 @@ subprojects {
     }
 
     dependencies {
-        api (group: 'org.georegression', name: 'georegression', version: '0.22')
+        api (group: 'org.georegression', name: 'georegression', version: '0.23-SNAPSHOT')
         api (group: 'org.ddogleg', name: 'ddogleg', version: '0.18')
 
         compileOnly 'org.projectlombok:lombok:1.18.10'
