- Fixed Kotlin build error - Suppressed JavaDoc when building SNAPSHOT to reduce build clutter - Reduced build warnings

--- a/build.gradle
+++ b/build.gradle
@@ -149,6 +149,7 @@ subprojects {
     }
 
     javadoc.failOnError = false
+    javadoc.enabled = !project.version.contains("SNAPSHOT") // disable to stop it from spamming stdout
     artifacts {
         archives sourcesJar
     }
