--- a/integration/boofcv-kotlin/build.gradle
+++ b/integration/boofcv-kotlin/build.gradle
@@ -2,6 +2,13 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.4.0'
 }
 
+configurations.all {
+    resolutionStrategy {
+        force 'org.jetbrains.kotlin:kotlin-stdlib:1.4.0'
+        force 'org.jetbrains.kotlin:kotlin-stdlib-common:1.4.0'
+    }
+}
+
 dependencies {
     api project(':main:boofcv-types')
     api project(':main:boofcv-io')
@@ -13,18 +20,11 @@ dependencies {
     api project(':integration:boofcv-swing')
 
     testApi project(':integration:boofcv-WebcamCapture')
-
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
 sourceSets {
     test.kotlin.srcDirs += 'examples/'
 }
 
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
+compileKotlin     { kotlinOptions.jvmTarget = "1.8" }
+compileTestKotlin { kotlinOptions.jvmTarget = "1.8" }
