build.gradle  - Modified build script to avoid one directory being referenced by multiple sourceSets  - Gradle is just fine with this but IntelliJ was not and would refuse to recognize the classes

--- a/main/boofcv-types/build.gradle
+++ b/main/boofcv-types/build.gradle
@@ -1,2 +1,4 @@
 dependencies {
+    implementation project.sourceSets.noauto.compileClasspath
+    implementation project.sourceSets.noauto.runtimeClasspath
 }
