Unit test failures are no longer ignored and should cause CI to fail

--- a/build.gradle
+++ b/build.gradle
@@ -76,11 +76,7 @@ subprojects {
 
     test {
         useJUnitPlatform()
-        ignoreFailures true
-        testLogging {
-            events 'FAILED'
-        }
-//        reports.html.enabled = false
+        reports.html.enabled = false
     }
 
     sourceSets {
