--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,7 @@ subprojects {
     test {
         useJUnitPlatform()
         reports.html.enabled = false
+        testLogging.showStandardStreams = true // Useful for debugging on Travis and there should be no stdout spam
     }
 
     sourceSets {
