--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import org.gradle.api.tasks.testing.logging.TestExceptionFormat
+
 //import net.ltgt.gradle.errorprone.CheckSeverity
 
 plugins {
@@ -77,7 +79,12 @@ subprojects {
     test {
         useJUnitPlatform()
         reports.html.enabled = false
-        testLogging.showStandardStreams = true // Useful for debugging on Travis and there should be no stdout spam
+        // Make the error logging verbose to make debugging on CI easier
+        testLogging.showStandardStreams = true
+        testLogging.exceptionFormat TestExceptionFormat.FULL
+        testLogging.showCauses true
+        testLogging.showExceptions true
+        testLogging.showStackTraces true
     }
 
     sourceSets {
