dependencyInfo - Added gradle command which prints information on libraries BoofCV is dependent on - This runs on CI to make debugging easier

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,6 @@ install:
   - ./gradlew autogenerate
   - ./gradlew assemble
 script:
+  - ./gradlew  -q --console plain dependencyInfo
   - ./gradlew test
   - ./gradlew spotlessJavaCheck
