--- a/integration/boofcv-android/examples/video/app/build.gradle
+++ b/integration/boofcv-android/examples/video/app/build.gradle
@@ -41,8 +41,10 @@ configurations {
 dependencies {
     ['boofcv-android', 'boofcv-core'].each {
         String a -> api group: 'org.boofcv', name: a, version: '0.37' }
+
+    annotationProcessor 'org.projectlombok:lombok:1.18.16'
+
     api fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
-    testImplementation 'junit:junit:4.12'
 }
