--- a/integration/boofcv-android/examples/video/build.gradle
+++ b/integration/boofcv-android/examples/video/build.gradle
@@ -1,8 +1,3 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.4'
-}
-
 buildscript {
     repositories {
         google()
@@ -11,9 +6,12 @@ buildscript {
             url 'https://maven.google.com/'
             name 'Google'
         }
+        maven {
+            url 'https://oss.sonatype.org/content/repositories/snapshots'
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.1'
+        classpath 'com.android.tools.build:gradle:4.1.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -25,6 +23,10 @@ allprojects {
         mavenLocal()
         google()
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
         maven {
             url 'https://oss.sonatype.org/content/repositories/snapshots'
         }
