--- a/integration/boofcv-android/examples/video/gradle/wrapper/gradle-wrapper.properties
+++ b/integration/boofcv-android/examples/video/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Mon Apr 16 21:32:45 PDT 2018
+#Mon Dec 21 15:10:23 PST 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.4-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-all.zip
