--- a/build.gradle
+++ b/build.gradle
@@ -110,8 +110,8 @@ subprojects {
     }
 
     dependencies {
-        api(group: 'org.georegression', name: 'georegression', version: '0.23')
-        api(group: 'org.ddogleg', name: 'ddogleg', version: '0.19')
+        api(group: 'org.georegression', name: 'georegression', version: '0.24-SNAPSHOT')
+        api(group: 'org.ddogleg', name: 'ddogleg', version: '0.20-SNAPSHOT')
 
         compile group: 'net.sf.trove4j', name: 'trove4j', version: '3.0.3'
 
