Fixed issue where it did not turn off signing when there was no ossrh acccount

--- a/build.gradle
+++ b/build.gradle
@@ -305,7 +305,7 @@ subprojects {
         }
     }
 
-    if( project.hasProperty('ossrhUsername') ) {
+    if (ext.ossrhPassword != "dummy") {
         signing { sign publishing.publications.mavenJava }
     }
 }
