- Updated to JMH 1.27 - Added a way to go from string abbreviation to ImageType - Two more benchmarks updated

--- a/build.gradle
+++ b/build.gradle
@@ -138,7 +138,7 @@ subprojects {
         benchmarkImplementation project.sourceSets.main.runtimeClasspath
         benchmarkImplementation project.sourceSets.main.compileClasspath
 
-        ['1.19'].each { String a ->// don't upgrade to 1.21! much slower
+        ['1.27'].each { String a ->
             benchmarkCompile('org.openjdk.jmh:jmh-core:' + a)
             benchmarkAnnotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:' + a
         }
