--- a/main/boofcv-io/build.gradle
+++ b/main/boofcv-io/build.gradle
@@ -2,6 +2,7 @@ dependencies {
 	api project(':main:boofcv-ip')
 	api project(':main:boofcv-geo')
 	api project(':main:boofcv-sfm')
+	api project(':main:boofcv-recognition')
 
 	api group: 'org.yaml', name: 'snakeyaml', version: '1.23'
 	api group: 'commons-io', name: 'commons-io', version: COMMONS_IO_VERSION
