Gradle tasks that create jars now all end in Jar

--- a/demonstrations/build.gradle
+++ b/demonstrations/build.gradle
@@ -9,7 +9,7 @@ dependencies {
 }
 
 // Create a jar which contains all the applications
-task demonstrations(type: Jar) {
+task demonstrationsJar(type: Jar) {
 	manifest {
 		attributes 'Implementation-Title': 'BoofCV Demonstrations Jar',
 				'Implementation-Version': version,
