build.gradle - Minor tweak to UTF-8 forced encoding

--- a/build.gradle
+++ b/build.gradle
@@ -48,8 +48,7 @@ subprojects {
     }
 
     // Prevents tons of errors if someone is using ASCII
-    compileJava {options.encoding = "UTF-8"}
-
+    tasks.withType(JavaCompile).configureEach { options.encoding = "UTF-8" }
     // Creates Java 8 byte code
     tasks.withType(JavaCompile).configureEach { options.release = 8 }
 
