feature/feature_recognition - Unit tests - Improving documentation

--- a/main/boofcv-recognition/build.gradle
+++ b/main/boofcv-recognition/build.gradle
@@ -18,4 +18,5 @@ dependencies {
 	testImplementation project(':main:boofcv-io')
 	testImplementation project(':main:boofcv-simulation')
 	testImplementation project(':integration:boofcv-swing')
+	testImplementation project(':main:boofcv-sfm').sourceSets.test.output
 }
