build - Fixed archiveName for jars

--- a/applications/build.gradle
+++ b/applications/build.gradle
@@ -29,15 +29,12 @@ task applicationsJar(type: Jar) {
 
 	outputs.upToDateWhen { false }
 
+	archiveFile.set(file('applications.jar'))
+
 	from sourceSets.main.output
 
 	dependsOn configurations.runtimeClasspath
 	from { configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { zipTree(it) } } {
 		exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA'
-	}
-
-
-	doLast {
-		archiveFile.renameTo(file('applications.jar'))
 	}
 }
