--- a/demonstrations/build.gradle
+++ b/demonstrations/build.gradle
@@ -18,14 +18,12 @@ task demonstrationsJar(type: Jar) {
 
 	outputs.upToDateWhen { false }
 
+	archiveFile.set(file('demonstrations.jar'))
+
 	from sourceSets.main.output
 
 	dependsOn configurations.runtimeClasspath
 	from { configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { zipTree(it) } } {
 		exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA'
-	}
-
-	doLast {
-		archiveFile.renameTo(file('demonstrations.jar'))
 	}
 }
